--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+<div style="padding-top: 20px;">
   <app-root></app-root>
+</div>
+
 </body>
 </html>
